# hfss_analysis

./: .gitignore  CommonErrors.txt  LICENSE  README.md  __setup.py  plot_cavity_simulation_results.py  pyproject.toml  setup.py  static-analysis.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md
Deprecated/SweepAnalysisExamples/: SweepAnalysis.py
HFSS_pyEPR_helpers/: TODO.txt  __init__.py  cavity_losses.py  cavity_losses_dev.py  cavity_losses_to_deprecate.py  qunatum_analysis.py
HFSS_pyEPR_helpers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LossesCalculationsExample/: CavityLosses.ipynb  cavity_losses.py
QuatumAnalysis/: cavity_losses.py  example.py  qunatum_analysis.py
StaticAnalysisExample/: static-analysis.ipynb  static-analysis_TransmonPadLength_650um.html
StaticAnalysisExamples/: 20210405_CD6.aedt  QuantumZeno.aedt  static-analysis_QuantumZeno.ipynb
SweepAnalysisExamples/: DesignSimulations.aedt  multi_parameter_sweep.py  sweep-analysis-classical.ipynb  sweep-analysis-quantum.ipynb
deprecated/: __setup.py  cavity_losses.py  classical_anaylsis.py  old_md  quantum_analysis.py  qunatum_analysis.py
deprecated/core/: simulation.py
src/hfss_analysis/: __init__.py  classical_anaylsis.py
src/hfss_analysis/classical_analysis/: __init__.py  formatter.py  simulation.py
src/hfss_analysis/core/: project.py  simulation.py  variables.py
src/hfss_analysis/field_averager/: __init__.py  simulation.py
src/hfss_analysis/hfss_project/: project.py  (+1 more)
tests/: test_classic_formatter.py  test_quantum_formatter.py  test_simulation_results.py  test_valued_variables.py
(+12 files in other folders)
