[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hfss_analysis"
version = "0.0.1"
authors = [
  {name="Uri Goldblatt", email="goldblatt.uri@weizmann.ac.il" },
  {name="Barkay Guttel", email="barkay.guttel@weizmann.ac.il" },
]
description = "Automating simulation with hfss and pyEPR"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "pytest",
    "tqdm",
    "pywin32",
    "pyepr-quantum>=0.8.5.7"
]

